# Satisfactory_AltRecipe

./: Cargo.toml  LICENSE  README.md  build.sh  index.html
res/: recipes.json
src/: items.rs  main.rs  scrape.rs
