[package]
name = "satisfactory_alt_recipe"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.27"
lazy_static = "1.4.0"
macroquad = "0.3.25"
# reqwest = {version = "0.11.16", features = ["blocking"]}
# scraper = "0.16.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"

